<resources>
    <string name="app_name">ProytectMine</string>
    <string name="SearchViewText">SEARCH FOR A COCKTAIL</string>
    <string name="SearchCocktailButton">Search Cocktail</string>
    <string name="IngredientButton">Search By Ingredient</string>
    <string name="RandomButton">Random Cocktail</string>
    <string name="FavoritesButton">Favorites</string>
    <string name="FilterByGlassButton">Filter By Glass</string>
    <string name="textRecyclerView">Top Cocktails: </string>
    <string name="TitleMain">¿What do you prefer Today?</string>
    <string name="SubtitleMain">Search By Ingredients,Name or Random Discover</string>
    <string name="CocktailName">Cocktail Name</string>
    <string name="Ingredients">Ingredients : </string>
    <string name="Instruccions">"Instruccions : "</string>

    <string name="action_search">Search</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_share">Share</string>
    <string name="tituloSearchActivity">"Resultados: "</string>
</resources>