<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal">

    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchView"
        android:queryHint="@string/SearchViewText"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/buttonColor"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstLetterButton"
        android:text="@string/FirstLetterButton"
        android:backgroundTint="@color/buttonColor"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ingredientButton"
        android:text="@string/IngredientButton"
        android:backgroundTint="@color/buttonColor"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/randomButton"
        android:text="@string/RandomButton"
        android:backgroundTint="@color/buttonColor"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/favoritesButton"
        android:text="@string/FavoritesButton"
        android:backgroundTint="@color/buttonColor"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/filterByGlassButton"
        android:text="@string/FilterByGlassButton"
        android:backgroundTint="@color/buttonColor"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"

        />




</LinearLayout>