<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--Imagen del Coctel-->
    <ImageView
        android:id="@+id/coctelImageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        tools:background="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />
    <!--Nombre del Coctel-->

    <TextView
        android:id="@+id/cocktailNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/coctelImageView"
        android:layout_gravity="center_horizontal"
        android:text="@string/CocktailName"
        android:textAlignment="center"
        tools:text="MoscowMule"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        />
    <!--Ingredientes-->
    <TextView
        android:id="@+id/ingredientsTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cocktailNameTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_gravity="start"
        android:text="@string/Ingredients"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        />
    <!--aqui van  los ingedientes-->
    <androidx.cardview.widget.CardView
        android:id="@+id/ingredientsCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/ingredientsTitleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/ingredientsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ingredientsTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_gravity="start"
            android:text="@string/Instruccions"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:textStyle="normal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            tools:text="ipsm lorem asdhbaksjdb asbjdas kdbasdkjbasdjbaks djbas jbaksjb dkajsbd"
            />
    </androidx.cardview.widget.CardView>
    <!--Instrucciones-->
    <TextView
        android:id="@+id/instruccionsTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ingredientsCardView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_gravity="start"
        android:text="@string/Instruccions"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        />
    <!--aqui van las instrucciones -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/instruccionsTitleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <TextView
        android:id="@+id/instruccionsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ingredientsTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_gravity="start"
        android:text="@string/Instruccions"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="normal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        tools:text="ipsm lorem asdhbaksjdb asbjdas kdbasdkjbasdjbaks djbas jbaksjb dkajsbd"
        />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>